[FIX] UI improvements: alignment fixed across the client

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -246,27 +246,27 @@
   }
   
   .welcome-wrapper {
-	text-align: center;
+  text-align: center;
   }
 
   h3.platform, h4.new {
-	max-width: 700px;
-	margin: auto;
+  max-width: 700px;
+  margin: auto;
   }
 
   h4.new {
-	padding: 25px 0;
-	border-top: 1px solid @midgray;
-	font-weight: 200;
-	font-size: 1.1em;
+  padding: 25px 0;
+  border-top: 1px solid @midgray;
+  font-weight: 200;
+  font-size: 1.1em;
   }
 
   span.currency {
-	font-weight: 500;
+  font-weight: 500;
   }
 
   .xrp-xau {
-	font-size: 1.2em;
+  font-size: 1.2em;
   }
 }
 
@@ -854,12 +854,15 @@
     }
   }
 
+  #divider {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
   .head {
     margin-top: 10px;
     margin-bottom: 10px;
-    padding: 0 0 5px;
     font-weight: bold;
-    border-bottom: 1px solid @midgray;
   }
 
   .lines {
@@ -875,8 +878,6 @@
 
   .head {
     margin-bottom: 10px;
-    border-bottom: 1px solid @midgray;
-    padding-bottom: 10px;
     line-height: 30px;
   }
 
@@ -1441,8 +1442,6 @@
 
 #t-security {
 
-  padding: 0px 26px;
-
   .settingPage a {
     display: block;
     padding: 10px;
@@ -1570,11 +1569,10 @@
   #renameForm {
     padding-left: 15px;
   }
+
 }
 
 #t-advanced {
-
-  padding: 0px 26px;
 
   .settingPage a {
     display: block;
@@ -2088,7 +2086,6 @@ html.t-trade header nav ul > li.active#nav-advanced > a:after {
 }
 
 #t-fund, #t-xrp, #t-btc, #t-trust {
-  padding: 0px 26px;
 
   .currencies a {
     display: block;
@@ -2239,8 +2236,6 @@ html.t-trade header nav ul > li.active#nav-advanced > a:after {
 }
 
 #t-account {
-
-  padding: 0px 26px;
 
   .info a {
     display: block;
